--- a/distributed key-value storage algorithm.tex
+++ b/distributed key-value storage algorithm.tex
@@ -115,7 +115,7 @@ Overall, our system's correctness argument is fairly basic. The system works cor
 
 \section*{Testing}
 
-We tested our code in a variety of ways, largely using the test scripts contained in \tt{t.erl}. First, we started a single node with a variety of values for M. Then, we did simple tests to ensure that everything was initialized properly, as shown in \tt{test_store_basic}. 
+We tested our code in a variety of ways, largely using the test scripts contained in \tt{t.erl}. First, we started a single node with a variety of values for M. Then, we did simple tests to ensure that everything was initialized properly, as shown in \tt{test_store_basic}. Then, we insert data into the system, 
 
 \section*{Messages}
 In this table, we use the initialism ``OW'' to stand for Outside World: i.e., an arbitrary computer outside of our system.
